Refactor backend structure and update frontend components

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,24 @@
 spring.application.name=Feynmind
-spring.datasource.url=jdbc:mysql://localhost:3306/feynman_db?createDatabaseIfNotExist=true
+
+# --- DATABASE CONNECTION ---
+# Note: verify that the database 'feynman_db' is created in MySQL!
+spring.datasource.url=jdbc:mysql://localhost:3306/feynman_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=CRAKAhed7139
+
+# --- HIBERNATE SETTINGS (CRITICAL FOR FIXING 500 ERROR) ---
+# 'update' tells Java to create/fix the tables automatically
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# --- UPLOAD LIMITS ---
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+# --- SECURITY ---
+jwt.secret=PleaseChangeThisToALongRandomSecretKeyForYourApp123
+
+# --- AI CONFIGURATION ---
+gemini.api.key=AIzaSyBG6OXo_FsvmZ2BWcJkeE4KFd-z8ZzTx0o
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
